 * Defined API for registration files (Class regfile.regfile.RegFile)
 * Introduced constants for keyboard models (regbank.models)
 * Introduced main window class.
 * Introduced classes for coordinating the import of registrations and the
   assembly of bank files. For this certain signals from the main window are
   delegated to the coordinator objects.


2008-07-12  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Established sub-packages called tests to hold unit tests.


2008-07-09  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Extended helper scripts by additional command line option --clean (or -c)
   which removes previously generated files.
 * Extended setup script to use the newly introduced cleanup services in order
   remove files generated with root permissions. Those files could break the
   helper scripts otherwise as they weren't allowed to overwrite the files
   when re-run with user-privileges.
 * Extended setup script to assume "--help" option if no option is given
   by the user. Otherwise the call to setup(...) would not return and there
   would be no chance to clean up afterwards.


2008-07-08  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Made setup script output the licence name if requested by --licence.


2008-07-07  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Wrote a python script which uses xgettext for extracting all
   translateable strings from the source and glade files.
 * Wrote a python script which uses msgfmt for building binary catalog
   files from available translations.
 * Extended setup.py to install localized message catalogs.
 * Cleaned up subversion repository from unwanted files (like *.pyc and so on).


2008-07-07  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Created project directories and empty modules
 * Created modules const and main as well as class Main. The program can
   already display --help and --version strings.