@@ -1,6 +1,6 @@
 #encoding=utf-8
 
-# models.py
+# exceptions.py
 # This file is part of PSR Registration Shuffler
 #
 # Copyright (C) 2008 - Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>
@@ -24,23 +24,28 @@
 PURPOSE
 =======
 
-This module holds simple constants with the short names of available
-keyboard models. Since these names are meant to be used within data files
-(registration files mostly) they should never be translated to foreign
-languages.
+This module provides all exceptions known in the regfile package.
 '''
 
-# Public export of module content
-__all__ = [
-    "YAMAHA_PSR2000"
-]
+#class ClassIsSingleton(Exception):
+    #'''
+    #This exception gets thrown whenever it's tried to instanciate a singleton
+    #class through one of its constructors instead of the dedicated accessor
+    #methods.
+    #'''
 
+    #_class   = None
+    #_message = _("The object is a singleton object which shouldn't be instanciated through a constructor. Use getInstance() instead.")
 
-# Constants with technical short names for keyboard models
-YAMAHA_PSR2000 = "YAMAHA PSR2000"
+    #def __init__(self, cls=None):
+        #'''
+        #Constructor. Takes the class object as optional parameter cls.
+        #'''
+        #self._class = cls
 
-
-# Dictionary with user-friendly product names. (Not translateable)
-name = {
-    YAMAHA_PSR2000: "Yamaha PSR-2000"
-}
+    #def __str__(self):
+        #'''
+        #Returns string representation of the exception with a useful error
+        #message.
+        #'''
+        #return "%s (%s)" % (self._message, str(self._class))
